--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ path = "src/lib.rs"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 itertools = "0.10.1"
-parse-display = "0.7.0"
-parse-display-derive = "0.7.0"
+parse-display = "0.8.0"
+parse-display-derive = "0.8.0"
 regex = "1.5.4"
 pathfinding = "4.0.0"
+xxcalc = "0.2.1"
